--- a/free-nodes/2025-6-8-free-subscribe-node.htm
+++ b/free-nodes/2025-6-8-free-subscribe-node.htm
@@ -137,6 +137,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-6-7-free-node-subscribe-links.htm">VPN设备 | 6月7日21.6M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-6-9-node-share.htm">VPN设备 | 6月9日20M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -165,16 +166,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-6-5-free-v2ray.htm" title="VPN设备 | 6月5日21M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享">VPN设备 | 6月5日21M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-5-free-node-subscribe-links.htm" title="VPN设备 | 5月5日18.8M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 5月5日18.8M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-110867.htm" title="import axios from ‘axios‘失效的问题">import axios from ‘axios‘失效的问题</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-14-free-v2ray.htm" title="VPN设备 | 5月14日21.9M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 5月14日21.9M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-17-node-share-links.htm" title="VPN设备 | 5月17日19.2M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享">VPN设备 | 5月17日19.2M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-6-clash-v2ray-ss-ssr.htm" title="VPN设备 | 5月6日19.5M/S|免费VPN/Clash/V2ray/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 5月6日19.5M/S|免费VPN/Clash/V2ray/SSR/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-20-free-high-speed-nodes.htm" title="VPN设备 | 5月20日19.3M/S|免费VPN/SSR/Shadowrocket/Clash/V2ray免费节点订阅分享">VPN设备 | 5月20日19.3M/S|免费VPN/SSR/Shadowrocket/Clash/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-3-free-v2ray.htm" title="VPN设备 | 5月3日19.8M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享">VPN设备 | 5月3日19.8M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-7-free-v2ray-subscribe.htm" title="VPN设备 | 5月7日23M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享">VPN设备 | 5月7日23M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-26-free-high-speed-nodes.htm" title="VPN设备 | 5月26日19M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 5月26日19M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-2-free-node-subscribe-links.htm" title="VPN设备 | 6月2日22.9M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 6月2日22.9M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-31-free-node-subscribe-links.htm" title="VPN设备 | 5月31日21.5M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享">VPN设备 | 5月31日21.5M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-110867.htm" title="import axios from ‘axios‘失效的问题">import axios from ‘axios‘失效的问题</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-9-node-share.htm" title="VPN设备 | 6月9日20M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 6月9日20M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-10-free-subscribe-node.htm" title="VPN设备 | 6月10日18.7M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享">VPN设备 | 6月10日18.7M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-21-free-subscribe-node.htm" title="VPN设备 | 5月21日21.5M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享">VPN设备 | 5月21日21.5M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-12-node-share-links.htm" title="VPN设备 | 5月12日21.8M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 5月12日21.8M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-6-clash-v2ray-ss-ssr.htm" title="VPN设备 | 6月6日22.4M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享">VPN设备 | 6月6日22.4M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -186,7 +187,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
